changed display. Need to fix visuals not showing

--- a/fhir-app/static/css/ca_style.css
+++ b/fhir-app/static/css/ca_style.css
@@ -4,6 +4,11 @@
 		height: 100%;
 	}
 
+  .underline
+  {
+    border-bottom: 2px solid steelblue;
+  }
+
 	.blue-background
 	{
 		background-color: steelblue !important;
